# rules_jena

./: .bazelrc  CHANGELOG.md  MODULE.bazel  README.md  maven_install.json
docs/: BUILD.bazel  ROADMAP.md  SOURCES.md  dataset.md  defs.md  model.md  providers.md  reasoner.md  rules.md
examples/dataset_library/: BUILD.bazel  LoadTest.java  fixture.ttl
examples/reason/: BUILD.bazel  facts.ttl  has_inferred_animal.rq  ontology.ttl
examples/schemagen/: BUILD.bazel  UseGeneratedVocabTest.java  fixture.ttl
examples/smoke/: BUILD.bazel  no_orphans.rq  sample.ttl
examples/validate/: BUILD.bazel  data.ttl  shapes.ttl
jena/: BUILD.bazel  dataset.bzl  dataset_library.bzl  defs.bzl  model.bzl  providers.bzl  reasoner.bzl  rules.bzl  schemagen.bzl
jena/reasoner/: BUILD.bazel  JenaReasonerBin.java
jena/riot/: BUILD.bazel  JenaRiot.java
jena/schemagen/: BUILD.bazel
jena/shacl/: BUILD.bazel  JenaShacl.java
jena/sparql/: BUILD.bazel  JenaSparql.java  ResultEmit.java
jena/tdb2/: BUILD.bazel  JenaTdb2.java
