load("@rules_java//java:defs.bzl", "java_binary")
load("//jena:defs.bzl", "JENA_DEPS")

package(default_visibility = ["//visibility:public"])

# Concrete implementation of rules_rdf's sparql_engine toolchain
# contract. Consumers register it via a `sparql_engine_toolchain` +
# `toolchain` pair in their MODULE.bazel (see README).
#
# `JENA_DEPS` is the shared Maven label set — defined in
# `//jena:defs.bzl` so v0.2's jena_shacl / jena_riot / jena_reasoner
# can reuse it without duplicating Maven coordinates.
java_binary(
    name = "jena_sparql",
    srcs = ["JenaSparql.java"],
    main_class = "fastverk.rules_jena.sparql.JenaSparql",
    deps = JENA_DEPS,
)
